--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       <img class="logo" src="./images/logo.svg" alt="" />
     </header>
     <main class="container">
-      <section class="left top">
+      <div class="left top">
         <img src="./images/illustration-mockups.svg" alt="" />
-      </section>
+      </div>
       <article class="right bottom">
         <h1>Build The Community Your Fans Will Love</h1>
         <p>
