--- a/index.html
+++ b/index.html
@@ -3,15 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -36,7 +29,7 @@
   </head>
   <body>
     <header>
-      <img class="logo" src="./images/logo.svg" alt="" />
+      <img class="logo" src="./images/logo.svg" alt="huddle" />
     </header>
     <main class="container">
       <div class="left top">
