--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>Huddle landing page with single introductory section</title>
+    <title>Huddle</title>
   </head>
   <body>
-    <header>
-      <img class="logo" src="./images/logo.svg" alt="huddle" />
-    </header>
     <main class="container">
+      <div class="header">
+        <img class="logo" src="./images/logo.svg" alt="huddle" />
+      </div>
+
       <div class="left top">
-        <img src="./images/illustration-mockups.svg" alt="" />
+        <img class="mockup" src="./images/illustration-mockups.svg" alt="" />
       </div>
       <article class="right bottom">
         <h1>Build The Community Your Fans Will Love</h1>
@@ -57,7 +58,8 @@
         <a
           href="https://www.frontendmentor.io/profile/estebanp2022"
           target="_blank"
-          >Esteban Pesantes</a
+        >
+          Esteban Pesantes</a
         >.
       </p>
     </footer>
