--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
         </p>
         <a class="btn" href="">Register</a>
       </article>
-    </main>
 
-    <footer>
-      <div class="icons">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-instagram"></i>
+      <div class="footer">
+        <div class="icons">
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+        </div>
+        <p class="attribution">
+          Coded by
+          <a
+            href="https://www.frontendmentor.io/profile/estebanp2022"
+            target="_blank"
+          >
+            Esteban Pesantes</a
+          >.
+        </p>
       </div>
-      <p class="attribution">
-        Coded by
-        <a
-          href="https://www.frontendmentor.io/profile/estebanp2022"
-          target="_blank"
-        >
-          Esteban Pesantes</a
-        >.
-      </p>
-    </footer>
+    </main>
   </body>
 </html>
